--- a/user_portal/templates/login.html
+++ b/user_portal/templates/login.html
@@ -1,27 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
-</head>
-<body>
-    <form action="login" method="POST">
-        {% csrf_token %}
-        <input type="username" name="username" placeholder="username"><br>
-        <input type="password" name="password" placeholder="password"><br>
-        <button type="submit">submit</button>
-    </form>
-
-    <div>
-        {% for message in messages %}
-        <h3>{{message}}</h3>
-        {% endfor %}
-    </div>
-
-</body>
-</html> -->
 
 
 {% load static %}
@@ -30,55 +6,50 @@
 <head>
 <title>Login Form</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- Custom Theme files -->
-<link href="{% static 'registration.css'%}" rel="stylesheet" type="text/css" media="all" />
-<!-- //Custom Theme files -->
-<!-- web font -->
-<link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" >
+<link href="{% static 'styles.css'%}" rel="stylesheet" type="text/css" media="all" />
 <!-- //web font -->
 </head>
 <body>
 	<!-- main -->
-	<div class="main-w3layouts wrapper">
-		<h1>Login Here</h1>
-		<div class="main-agileinfo">
-			<div class="agileits-top">
-				<form action="login" method="post">
-                    {% csrf_token %}
-					<input class="text email" type="email" name="email" placeholder="Email" required="">
-					<input class="text" type="password" name="password" placeholder="Password" required="">
-					<div class="wthree-text">
-						<label class="anim">
-							<input type="checkbox" class="checkbox" required="">
-							<span>I Agree To The Terms & Conditions</span>
-						</label>
-						<div class="clear"> </div>
-					</div>
-					<input type="submit" value="LOGIN">
-				</form>
-				<!-- <p>Don't have an Account? <a href="#"> Login Now!</a></p> -->
-			</div>
+	<!-- <section class="section">	 -->
+	   	<div class="container">
+			<form class="box" action="login" method="POST" style="margin-bottom: 10px; box-sizing: border-box;">
+                {% csrf_token %}
+				<h1>Login here</h1><br>
+				<div class="field">
+				<label class="label">Email</label>
+				<div class="control">
+					<input class="input" type="email" name="email" placeholder="e.g. alex@example.com" required="required">
+				</div>
+				</div>
+			
+				<div class="field">
+				<label class="label">Password</label>
+				
+				<div class="control">
+					<input class="input" id="id_password" type="password" name="password" placeholder="********"  required="required">
+					<i class="far fa-eye" id="togglePassword" ></i>
+				</div>
+				</div>
+				<div class="column is-fullwidth"><button class="button is-primary is-fullwidth">Sign in</button></div>
+				<div>Don't have an account? <a href="register">Register</a></div>
+			</form>
 		</div>
-		<!-- copyright -->
-		<!-- <div class="colorlibcopy-agile">
-			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
-		</div> -->
-		<!-- //copyright -->
-		<ul class="colorlib-bubbles">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-	</div>
-	<!-- //main -->
+	<!-- </section> -->
+	<script>
+		const togglePassword = document.querySelector('#togglePassword');
+  		const password = document.querySelector('#id_password');
+ 
+		togglePassword.addEventListener('click', function (e) {
+			// toggle the type attribute
+			const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+			password.setAttribute('type', type);
+			// toggle the eye slash icon
+			this.classList.toggle('fa-eye-slash');
+});
+	</script>
 </body>
 </html>
