--- a/user_portal/templates/registration.html
+++ b/user_portal/templates/registration.html
@@ -1,67 +1,81 @@
+
+
 {% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-<title>registration Form</title>
+<title>Login Form</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- Custom Theme files -->
-<link href="{% static 'registration.css'%}" rel="stylesheet" type="text/css" media="all" />
-<!-- //Custom Theme files -->
-<!-- web font -->
-<link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" >
+<link href="{% static 'styles.css'%}" rel="stylesheet" type="text/css" media="all" />
 <!-- //web font -->
 </head>
 <body>
 	<!-- main -->
-	<div class="main-w3layouts wrapper">
-		<h1>registration Form</h1>
-		<div class="main-agileinfo">
-			<div class="agileits-top">
-				<form action="register" method="post">
-                    {% csrf_token %}
-					<input class="text" type="text" name="username" placeholder="username" required="">
-					<input class="text email" type="email" name="email" placeholder="Email" required="">
-					<input class="text" type="password" name="password1" placeholder="Password" required="">
-					<input class="text w3lpass" type="password" name="password2" placeholder="Confirm Password" required="">
-					<div class="wthree-text">
-						<label class="anim">
-							<input type="checkbox" class="checkbox" required="">
-							<span>I Agree To The Terms & Conditions</span>
-						</label>
-						<div class="clear"> </div>
+		<div>
+			
+	   	<div class="container">
+			<form class="box" action="register" method="POST">
+                {% csrf_token %}
+				<h1>Register here</h1><br>
+				<div class="field">
+					<label class="label">Username</label>
+					<div class="control">
+						<input class="input" type="text" name="username" placeholder="username" required="required">
 					</div>
-					<input type="submit" value="SIGNUP">
-				</form>
-                <p>{% if user.is_authenticated %}
-                    <li>Hello, {{user.username}}</li>
-                    <li> <a href="logout">Logout</a> </li>
-                    {% else %}
-                    <!-- <li> <a href="register">register</a> </li> -->
-                    <li>Already have an Account? <a href="login">login Here</a> </li>
-                    {% endif %}</p>
-				<!-- <p>Don't have an Account? <a href="#"> Login Now!</a></p> -->
-			</div>
+				</div>
+				<div class="field">
+					<label class="label">Email</label>
+					<div class="control">
+						<input class="input" type="email" name="email" placeholder="Email" required="required">
+					</div>
+				</div>
+				<div class="field">
+				<label class="label">Password</label>
+				<div class="control">
+					<input class="input" id="id_password" type="password" name="password1" placeholder="Password"  required="required">
+					<i class="far fa-eye" id="togglePassword" ></i>
+				</div>
+				</div>
+				<div class="field">
+					<label class="label">Confirm Password</label>
+					<div class="control">
+						<input class="input" id="is_password" type="password" name="password2" placeholder="Confirm Password" placeholder="********"  required="required">
+						<i class="far fa-eye" id="togglePassword1" ></i>
+					</div>
+				</div>
+				<div class="column is-fullwidth"><button class="button is-primary is-fullwidth">SIGNUP</button></div>
+				<div>Already hve an account? <a href="login">Login here</a></div>
+			</form>
 		</div>
-		<!-- copyright -->
-		<!-- <div class="colorlibcopy-agile">
-			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
-		</div> -->
-		<!-- //copyright -->
-		<ul class="colorlib-bubbles">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
 	</div>
-	<!-- //main -->
+	<script>
+		const togglePassword = document.querySelector('#togglePassword');
+  		const password = document.querySelector('#id_password');
+ 
+		togglePassword.addEventListener('click', function (e) {
+			// toggle the type attribute
+			const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+			password.setAttribute('type', type);
+			// toggle the eye slash icon
+			this.classList.toggle('fa-eye-slash');
+});
+	</script>
+
+<script>
+	const togglePassword1 = document.querySelector('#togglePassword1');
+	  const password1 = document.querySelector('#is_password');
+
+	togglePassword1.addEventListener('click', function (e) {
+		// toggle the type attribute
+		const type = password1.getAttribute('type') === 'password' ? 'text' : 'password';
+		password1.setAttribute('type', type);
+		// toggle the eye slash icon
+		this.classList.toggle('fa-eye-slash');
+});
+</script>
+
 </body>
 </html>
