--- a/user_portal/templates/data.html
+++ b/user_portal/templates/data.html
@@ -29,8 +29,10 @@
         </div>
     </nav>
 
-    <h1>Upload your sequenced data here.</h1></div>
+
+
     <div class="box">
+        <h1>Upload your sequenced data here.</h1>
             <form action="upload" method="post">
                 {% csrf_token %}
                         <div class="columns is-centered mb-0">
