--- a/user_portal/templates/upgrade.html
+++ b/user_portal/templates/upgrade.html
@@ -63,13 +63,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </fieldset>
                     <!-- <input class="text" type="text" name="firstname" placeholder="firstname" required=""><br>
                     <input class="text" type="text" name="lastname" placeholder="lastname" required=""><br> -->
-					<div class="wthree-text">
+					<!-- <div class="wthree-text">
 						<label class="anim">
 							<input type="checkbox" class="checkbox" required="">
 							<span>I Agree To The Terms & Conditions</span>
 						</label>
 						<div class="clear"> </div>
-					</div>
+					</div> -->
 					<input type="submit" value="update">
 				</form>
                 {% else %}
