--- a/user_portal/templates/index.html
+++ b/user_portal/templates/index.html
@@ -44,7 +44,7 @@
             <div class="table-container">
                 <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
                   <!-- Your table content -->
-                  <thead id="head">
+                  <thead id="head" class="has-text-centered">
                     <tr>
                       <!-- <th rowspan="2">ID</th> -->
                       <th rowspan="2">Username</th>
