--- a/user_portal/templates/data.html
+++ b/user_portal/templates/data.html
@@ -37,7 +37,7 @@
                 {% csrf_token %}
                         <div class="columns is-centered mb-0">
                             <div class="column is-4">
-                                    <input type="hidden" class="input" name="username" value="{{user.id}}" hidden>
+                                    <input type="hidden" class="input" name="username" value="{{user.username}}" hidden>
                                 <div class="column">
                                     <label>Total sequenced:</label>
                                     <input class="input" type="number" name="Total_sequenced"  required="required">                                
@@ -81,7 +81,7 @@
             <div class="hero-body">
                 <div class="table-container">
                     <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-                      <thead id="head">
+                      <thead id="head" class="has-text-centered">
                         <tr>
                           <th rowspan="2">ID</th>
                           <th rowspan="2">Date</th>
