--- a/user_portal/templates/index.html
+++ b/user_portal/templates/index.html
@@ -79,6 +79,20 @@
                         <td>{{data.Any_collaboration}}</td>
                     </tr>
                     {% endfor %}
+                    {% for data1 in data1 %}
+                    <tr>
+                        <!-- <th scope="row">{{data.id}}</th> -->
+                        <td style="font-weight: bolder;">{{data1.username}}</td>
+                        <td>null</td>
+                        <td>null</td>
+                        <td>null</td>
+                        <td>null</td>
+                        <td>null</td>
+                        <td>null</td>
+                        <td>null</td>
+                        <td>null</td>
+                    </tr>
+                    {% endfor %}
                 </tbody>
                 </table>
               </div>
